SERVER-78769 Join all the balancer threads on shutdown

(cherry picked from commit a5084e5dfa54f1d4bddf104ad0c73ea5f8a35789)